feat: unit tests have been added and minor bugs have been fixed
