# internal/controller/list_sub.go
@@ -1,6 +1,7 @@
 package controller
 
 import (
+	"github.com/Ararat25/subscription-aggregation-service/internal/entity"
 	"net/http"
 )
 
@@ -9,7 +10,7 @@ import (
 // @Description Возвращает полный список всех подписок
 // @Tags subscriptions
 // @Produce json
-// @Success 200 {array} entity.Subscription "Список подписок"
+// @Success 200 {array} entity.SubscriptionRequest "Список подписок"
 // @Failure 500 {object} ErrorResponse "Ошибка получения данных"
 // @Router /subscriptions [get]
 func (h *Handler) ListSubscriptions(w http.ResponseWriter, r *http.Request) {
@@ -20,5 +21,10 @@ func (h *Handler) ListSubscriptions(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	sendSuccess(w, subs, http.StatusOK)
+	subsResp := make([]*entity.SubscriptionRequest, 0, len(subs))
+	for _, sub := range subs {
+		subsResp = append(subsResp, entity.ParseSubscriptionToRequest(sub))
+	}
+
+	sendSuccess(w, subsResp, http.StatusOK)
 }
